v0.318 Fast bugfix: fir expdanding and collapsing of main menu items on big displaces

--- a/app/scss/tech/_components.scss
+++ b/app/scss/tech/_components.scss
@@ -384,7 +384,7 @@ mark {
 		}
 		&:hover {
 			>.dropdown__menu {
-				height: min(auto, 10em);
+				max-height: 20em;
 				display: block;
 			}
 		}
